# GeoVision-LULC

./: .gitignore  Dockerfile  GEMINI.md  README.md  evaluate_now.bat  post_training.bat  pyproject.toml  run_log.txt  run_log_uv.txt
app/: streamlit_app.py
configs/: deeplabv3plus.yaml  default.yaml  rtx4070_deeplabv3plus.yaml  rtx4070_default.yaml  rtx4070_sam.yaml  rtx4070_segformer.yaml  sam_mac.yaml  sam_seg.yaml  segformer.yaml
notebooks/: COLAB_GUIDE.md  COLAB_PATCHES.md
results/: benchmark_comparison.csv  benchmark_table.csv  benchmark_table.tex
scripts/: debug_inference.py  debug_metrics.py  debug_pipeline.py  debug_weights.py  evaluate.py  explainability.py  export_research_artifacts.py  train.py  train_all.sh  train_remainder.sh  train_sam_mac.sh  train_transformers.sh
src/training/: losses.py  metrics.py  trainer.py
src/utils/: explainability.py  geospatial.py  visualization.py
